<resources>
    <string name="app_name">TankApp</string>

    <string name="menu"		>Hauptmenu</string>
    <string name="entry"	>Tankeintrag</string>
    <string name="settings"	>Verwaltung</string>
    <string name="log"		>Log</string>
    <string name="stats"	>Statistik</string>
    
    <string name="settings_car"		>Fahrzeuge</string>
    <string name="settings_location">Ort/Tankstelle</string>
      
    <string name="settings_optionmenu_addLocation"		>Ort/Tankstelle hinzufügen</string>
    <string name="settings_optionmenu_removeLocation"	>Ort/Tankstelle entfernen</string>
    <string name="settings_optionmenu_editLocation"		>Ort/Tankstelle bearbeiten</string>
    <string name="settings_optionmenu_addCar"			>Fahrzeug hinzufügen</string>
    <string name="settings_optionmenu_removeCar"		>Fahrzeug entfernen</string>
    <string name="settings_optionmenu_editCar"			>Fahrzeug bearbeiten</string>
    
    <string name="settings_dialog_addcar">Bitte Autonamen eingeben:</string>
    <string name="settings_dialog_addlocation">Bitte einen Ort oder Tankstelle eingeben:</string>
    
    <string name="settings_toast_notext">Kein Text eingegeben. Aktion wird abgebrochen!</string>
    
    <string name="settings_intent_makepicture">Mach ein Bild von deinem Auto</string>
    <string name="settings_intent_choosepicture">Wähle ein Bild des Autos</string>
    
    <string name="entry_car_label">Ausgewähltes Auto:</string>
    <string name="entry_label_1">Preis pro Liter:</string>
    <string name="entry_label_2">Getankte Liter:</string>
    <string name="entry_label_3">Kilometerstand:</string>
    <string name="entry_label_4">Ort/Tankstelle:</string>
    <string name="entry_button_save">Speichern</string>
    
    <string name="entry_optionmenu_changecar">Fahrzeug ändern</string>
    <string name="entry_optionmenu_addlocation">Ort/Tankstelle hinzufügen</string>
    
    <string name="entry_toast_chooselocation">Bitte zuerst eine/n Ort/Tankstellte unter Verwaltung anlegen.</string>
    <string name="entry_toast_wrongentry">Es wurde eine Falsche eingabe gemacht</string>
    <string name="entry_toast_savesucess">Eintrag wurde gespeichert!</string>

    
	<string name="log_date"				>Datum\n\t</string>
	<string name="log_cost_per_litre"	>Euro\nLiter</string>
	<string name="log_litre"			>Liter\n\t </string>
	<string name="log_km"				>Km\n\t</string>
	<string name="log_location"			>Ort\nTankstelle</string>
	<string name="log_optionmenu_save"	>Auf SD-Karte speichern</string>
	<string name="log_toast_datasaved">Log wurde auf SD-Karte gespeichert</string>
	
	
	
	<string name="stats_consumtion_100"	>Verbrauch pro 100Km:</string>
	<string name="stats_km_month"		>Km pro Monat:</string>
	<string name="stats_cost_per_litre"	>Preis pro Liter:</string>
	<string name="stats_monthly_consts"	>Monatliche Kosten:</string>
	<string name="stats_litre"			>Liter</string>
	<string name="stats_length_notaion"	>Km</string>
	<string name="stats_currency"		>€</string>
	
  	<string name="stats_image_contentdesc"	>Grafische Anzeige der Statistiken</string>
  	<string name="stats_toast_nostats">Keine Statistik verfügbar</string>
  	
  
  	<string name="tost_noactivecar">Kein aktives Auto ausgewählt</string>
</resources>