<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scrollView_stats"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<TableLayout
			android:id="@+id/TableLayout_stats"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:stretchColumns="*" >

			<TableRow
				android:id="@+id/tableRow_stats_FirstRow"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_gravity="left" android:gravity="right" android:text="@string/stats_consumtion_100" android:textColor="@android:color/white"/>
			</TableRow>

			<TableRow
				android:id="@+id/tableRow_stats_SecondRow"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_gravity="left" android:gravity="right" android:text="@string/stats_km_month" android:textColor="@android:color/white"/>
			</TableRow>

			<TableRow
				android:id="@+id/tableRow_stats_ThirdRow"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_gravity="left" android:gravity="right" android:text="@string/stats_cost_per_litre" android:textColor="@android:color/white"/>
			</TableRow>

			<TableRow
				android:id="@+id/tableRow_stats_ForthRow"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" >

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:layout_gravity="left" android:gravity="right" android:text="@string/stats_monthly_consts" android:textColor="@android:color/white"/>
			</TableRow>
		</TableLayout>

		<ImageView
			android:id="@+id/ImageView_stats"
			android:layout_width="240dp"
			android:layout_height="240dp"
			android:layout_gravity="center_horizontal"
			android:contentDescription="@string/stats_image_contentdesc" />
	</LinearLayout>

</ScrollView>