<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/ScrollViewEntry"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@android:color/background_dark"
	android:scrollbars="vertical" >

	<LinearLayout
		android:id="@+id/LinearLayout_entry"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<TextView
			android:id="@+id/TextView_entry_activecar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:gravity="fill_horizontal"
			android:text="Tankeintrag für: + getCarName()"
			android:textColor="@android:color/white"
			android:textSize="@dimen/hint_size" >
		</TextView>

		<TextView
			android:id="@+id/TextView_menu_label_1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="fill_horizontal"
			android:text="@string/entry_label_1"
			android:textColor="@android:color/white"
			android:textSize="@dimen/label_size" >
		</TextView>

		<EditText
			android:id="@+id/EditText_ppl"
			android:layout_width="220dp"
			android:layout_height="wrap_content"
			android:drawableBottom="@android:drawable/divider_horizontal_dark"
			android:inputType="textPersonName|numberDecimal"
			android:maxLength="4"
			android:maxLines="1" >
		</EditText>

		<TextView
			android:id="@+id/TextView_menu_label_2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="fill_horizontal"
			android:text="@string/entry_label_2"
			android:textColor="@android:color/white"
			android:textSize="@dimen/label_size" >
		</TextView>

		<EditText
			android:id="@+id/EditText_gl"
			android:layout_width="220dp"
			android:layout_height="wrap_content"
			android:inputType="textPersonName|numberDecimal"
			android:maxLength="4"
			android:maxLines="1" >
		</EditText>

		<TextView
			android:id="@+id/TextView_menu_label_3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="fill_horizontal"
			android:text="@string/entry_label_3"
			android:textColor="@android:color/white"
			android:textSize="@dimen/label_size" >
		</TextView>

		<EditText
			android:id="@+id/EditText_ks"
			android:layout_width="220dp"
			android:layout_height="wrap_content"
			android:inputType="textPersonName|numberDecimal"
			android:maxLength="4"
			android:maxLines="1" >
		</EditText>

		<TextView
			android:id="@+id/TextView_menu_label_4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="fill_horizontal"
			android:text="@string/entry_label_4"
			android:textColor="@android:color/white"
			android:textSize="@dimen/label_size" >
		</TextView>

		<Spinner
			android:id="@+id/Spinner_loc"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >
		</Spinner>
	</LinearLayout>

</ScrollView>