<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_dark" >
    <TabHost
        android:id="@+id/TabHost1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >
            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >
                <!-- Tankeintrag Tab -->
                <ScrollView 
                    android:id="@+id/ScrollViewEntry"
                    android:layout_width="fill_parent"
               		android:layout_height="fill_parent"
               		android:scrollbars="vertical">
               		<LinearLayout
               		 xmlns:android="http://schemas.android.com/apk/res/android"
                   	 android:id="@+id/LinearLayout_entry"
                   	 android:orientation="vertical"
                   	 android:layout_width="fill_parent"
                     android:layout_height="wrap_content">           			
               			<TextView
               			    android:id="@+id/TextView_entry_activecar"
	               		     android:layout_height="wrap_content"
	               		     android:text="Tankeintrag für: + getCarName()"
	               		     android:layout_width="wrap_content"
	               		     android:gravity="fill_horizontal"	               		     
	               		     android:textSize="@dimen/hint_size" 
	               		     android:textColor="@color/title_color">
               			    
               			</TextView>
	               		<TextView
	               		     android:id="@+id/TextView_menu_label_1"
	               		     android:layout_height="wrap_content"
	               		     android:text="@string/entry_label_1"
	               		     android:layout_width="wrap_content"
	               		     android:gravity="fill_horizontal"
	               		     android:textSize="@dimen/label_size" 
	               		     android:textColor="@color/title_color">	               		                   		    
	               		</TextView>
	                    <EditText
	                        android:id="@+id/EditText_ppl"
	                        android:layout_width="220dp"
	                        android:layout_height="wrap_content"
	                        android:inputType="textPersonName|numberDecimal"
	                        android:maxLength="4"
	                        android:maxLines="1" >
	                    </EditText>
	               		                   		
	               		<TextView
	               		    android:id="@+id/TextView_menu_label_2"
	               		     android:layout_height="wrap_content"
	               		     android:text="@string/entry_label_2"
	               		     android:layout_width="wrap_content"
	               		     android:gravity="fill_horizontal"
	               		     android:textSize="@dimen/label_size"
	               		     android:textColor="@color/title_color">              		    
	               		</TextView>
	               		<EditText
	                        android:id="@+id/EditText_gl"
	                        android:layout_width="220dp"
	                        android:layout_height="wrap_content"
	                        android:inputType="textPersonName|numberDecimal"
	                        android:maxLength="4"
	                        android:maxLines="1" >
	                    </EditText>
	               		
	               		<TextView
	               		    android:id="@+id/TextView_menu_label_3"
	               		     android:layout_height="wrap_content"
	               		     android:text="@string/entry_label_3"
	               		     android:layout_width="wrap_content"
	               		     android:gravity="fill_horizontal"
	               		     android:textSize="@dimen/label_size"
	               		     android:textColor="@color/title_color">              		    
	               		</TextView>
	               		<EditText
	                        android:id="@+id/EditText_ks"
	                        android:layout_width="220dp"
	                        android:layout_height="wrap_content"
	                        android:inputType="textPersonName|numberDecimal"
	                        android:maxLength="4"
	                        android:maxLines="1" >
	                    </EditText>
	               		
	               		<TextView
	               		    android:id="@+id/TextView_menu_label_4"
	               		     android:layout_height="wrap_content"
	               		     android:text="@string/entry_label_4"
	               		     android:layout_width="wrap_content"
	               		     android:gravity="fill_horizontal"
	               		     android:textSize="@dimen/label_size"
	               		     android:textColor="@color/title_color">              		    
	               		</TextView>
	            		<Spinner
			                android:id="@+id/Spinner_loc"
			                android:layout_height="wrap_content"
			                android:layout_width="fill_parent">           		    
	            		</Spinner>
	            		
                    </LinearLayout>
                </ScrollView><!-- Tankeintrag Tab END -->
               	<ListView
					android:layout_height="wrap_content"
					android:id="@+id/ListView_Menu"
					android:layout_width="fill_parent"
					android:layout_gravity="left">
				</ListView>
 				<TableLayout
                    android:id="@+id/TableLayout_log"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                </TableLayout>
                <TableLayout
                    android:id="@+id/TableLayout_stats"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                </TableLayout>             
               		
               
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>